# music-downloader

./: README.md  pyproject.toml
src/music_downloader/: cli.py  core.py  metadata.py  utils.py
src/music_downloader/logging/: logging.py
src/music_downloader/sources/: core.py  registry.py  yt_dlp.py
